# Programacion_para_analitica_de_datos

./: README.md
Laboratorios/: pyproject.toml
Laboratorios/Corte 1/Semana_1/: PY0101EN-1-1-Write_your_first_python_code.ipynb  PY0101EN-2-3-Sets.ipynb  PY0101EN-2-4-Dictionaries.ipynb
Laboratorios/Corte 1/Semana_2/: PY0101EN-4-1-ReadFile.ipynb  members.txt  testWrite.txt
Laboratorios/Corte 1/Semana_3/: DA0101EN-Review-Introduction.jupyterlite.ipynb  Module 4_Pandas_Practice.ipynb  Module 5_PY0101EN-5-1-Numpy1D.ipynb
Laboratorios/Corte 2/Data-Wrangling/: DA0101EN-2-Review-Data-Wrangling.ipynb  clean_df.csv
Laboratorios/Corte 2/EDA/: DA0101EN-3-Review-Exploratory-Data-Analysis.ipynb
Laboratorios_test/Cohorte_1/: pyproject.toml  testAppend.txt
Laboratorios_test/Cohorte_1/Semana_1/: PY0101EN-1-2-Strings.ipynb  PY0101EN-2-1-Tuples.ipynb  PY0101EN-2-2-Lists.ipynb
Laboratorios_test/Cohorte_1/Semana_2/: 3-1.2ExcecptionHandling.ipynb  PY0101EN-3-1-Conditions.ipynb  PY0101EN-3-2-Loops.ipynb  PY0101EN-3-3-Functions .ipynb  PY0101EN-4-2-WriteFile.ipynb  inactive.txt
Laboratorios_test/Cohorte_1/Semana_3/: Module 5_PY0101EN-5-2-Numpy2D.ipynb
Parcial_Corte2/: wines.ipynb
