[tool.poetry]
name = "cohorte-1"
version = "0.1.0"
description = "Proyecto para Cohorte 1 - Programación para analítica de datos"
authors = ["Tu Nombre <tu.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^3.0.1"
numpy = "^2.4.3"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
jupyterlab = "^4.5.6"
notebook = "^7.5.5"
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"